# polld

./: .env.example  README.md  pyproject.toml
polld/: discord_opcodes.py  main.py  models.py  opcode_handlers.py  payloads.py  settings.py
tests/: test_polld.py
